--- a/.github/workflows/publish-2.yml
+++ b/.github/workflows/publish-2.yml
@@ -7,6 +7,7 @@ name: Render and Publish
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
