--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,8 +24,8 @@ website:
  
 format:
   html:
-    theme: [cosmo, custom.scss]
-    css: styles.css
+    theme: [cosmo, assets/css/custom.scss] 
+    css: assets/css/styles.css
     toc: true
     number-depth: 0
     reference-location: margin
