add a day of logic review and prep

--- a/schedule.yml
+++ b/schedule.yml
@@ -93,7 +93,7 @@
   objectives:
       - Sets and Logic
       - Proof
-  prep: TBD
+  prep: <a href="content/modules/19-more-logic/prep.qmd">More on Quantifiers and Logic</a>
   activities:
       - TBD
   notes:
