--- a/schedule.yml
+++ b/schedule.yml
@@ -170,7 +170,7 @@
   activities:
   notes:
   publish: true
-  due: "Lab 3: TBD"
+  due: "Lab 3: Proof Practice"
 - date: 2023-10-16
   header: "Relations"
   summary:
