--- a/schedule.yml
+++ b/schedule.yml
@@ -205,7 +205,8 @@
   summary:
   objectives:
   prep: <a href="content/modules/40-counting-1/prep.qmd">Counting</a>
-  activities: <a href="content/modules/40-counting-1/in-class.qmd">Counting Activity</a>
+  activities: 
+    - <a href="content/modules/40-counting-1/in-class.qmd">Counting Activity</a>
   notes:
   publish: true
   due:
