--- a/schedule.yml
+++ b/schedule.yml
@@ -202,8 +202,9 @@
   due: "Lab 3: Proof Practice"
 - date: 2023-10-23
   header: "Counting"
-  summary:
-  objectives:
+  summary: We use the principles of addition, multiplication, and inclusion-exclusion to solve counting problems. 
+  objectives: 
+    - Counting
   prep: <a href="content/modules/40-counting-1/prep.qmd">Counting</a>
   activities: 
     - <a href="content/modules/40-counting-1/in-class.qmd">Counting Activity</a>
@@ -211,25 +212,29 @@
   publish: true
   due:
 - date: 2023-10-25
-  header: "Counting"
-  summary:
+  header: "Permutations and Combinations"
+  summary: "We use permutations and combinations to count possibilities in situations involving rearrangement and subset-selection."
   objectives:
-  prep: 
+  - Counting
+  prep: <a href="content/modules/41-counting-2/prep.qmd">Permutations and Combinations</a>
   activities:
   notes:
   publish: true
   due:
 - date: 2023-10-27
-  header: "Lab 4: TBD"
-  summary:
+  header: "Lab 4: Counting Lattice Paths"
+  summary: "We use binomial coefficients and Python programming to efficiently compute the number of paths through grids."
   objectives:
-  prep:
+  - Counting
+  prep: <a href="content/modules/45-lattice-paths">Counting Lattice Paths</a>
   activities:
+  - |
+      <a href="https://colab.research.google.com/github/PhilChodrow/CSCI-0200/blob/main/assignments/labs/04-lattice-paths.ipynb">Lab 4: Counting Lattice Paths</a>
   notes:
   publish: true
-  due: "Lab 3: TBD"
+  due: 
 - date: 2023-11-06
-  header: "Asymptotics and Big-Oh"
+  header: Asymptotics and Big-Oh
   summary:
   objectives:
   prep:
@@ -238,7 +243,7 @@
   publish: true
   due:
 - date: 2023-11-08
-  header: "Analyzing Algorithms: The Tree Method"
+  header: Analyzing algorithms
   summary:
   objectives:
   prep:
